@@ -5,7 +5,7 @@
 // It does NOT contain specifications for Vanilla POIs.
 //
 // This file was generated by a script: teragon-scout.py
-// Generation Timestamp: 2023-07-08 16:53:23.018459
+// Generation Timestamp: 2023-08-12 08:55:54.318184
 // --------------------------------------------------------------------------
 //
 // ZZTong-Prefabs: Wilderness POIs
@@ -24,6 +24,8 @@ zztong_solar_farm_01;0;-2;42;8;42;poi_distance:49;biome:desert,forest,snow;regio
 zztong_stone_quarry_01;2;-16;81;21;81;poi_distance:49;biome:desert,forest,snow;region:default;road:gravel
 zztong_survivor_base_ruin_01;2;-3;45;15;45;poi_distance:49;biome:desert,forest,snow,wasteland;region:default;road:gravel
 zztong_tfp_army_barracks_01;2;-3;60;23;60;poi_distance:49;biome:desert,forest,snow;region:default;road:gravel
+zztong_tfp_prison_01;2;-1;42;19;42;poi_distance:49;biome:burnt,desert,forest,snow,wasteland;region:default;road:gravel
 zztong_tfp_ranger_station_01;1;-3;25;15;25;poi_distance:49;biome:desert,forest,snow;region:default;road:gravel
+zztong_tfp_settlement_01;2;-1;42;19;42;poi_distance:49;biome:burnt,desert,forest,snow,wasteland;region:default;road:gravel
 zztong_vault_k9_01;2;-28;100;36;100;poi_distance:49;biome:desert,forest,snow;region:default;road:gravel
 zztong_wind_turbine_01;2;-3;31;69;31;poi_distance:49;biome:desert,forest,snow,wasteland;region:default;road:gravel
